[package]
name = "llamakey"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["http2"] }
axum-auth = "0.7"
comfy-table = "7.1.0"
dotenvy = "0.15.7"
hyper = { version = "1.1", features = ["http1", "http2"] }
hyper-rustls = { version = "0.26", features = [
  "http1",
  "http2",
  "rustls-native-certs",
] }
hyper-util = { version = "0.1", features = [
  "client",
  "http1",
  "http2",
  "tokio",
] }
indoc = "2.0.4"
log = "0.4"
pretty_env_logger = "0.5"
rustls = "0.22"
rustls-native-certs = "0.7"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
strum = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1", features = [
  "sync",
  "parking_lot",
  "macros",
  "time",
  "rt-multi-thread",
] }
tower-http = { version = "0.5", features = ["compression-full", "limit"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
once_cell = "1.19.0"
chrono = "0.4.38"
base16ct = { version = "0.2.0", features = ["alloc"] }
itertools = "0.13.0"